[project]
name = "comfyui-ig-nodes"
description = "Custom nodes to aid in the exploration of Latent Space"
version = "1.0.3"
license = "LICENSE"

[project.urls]
Repository = "https://github.com/IDGallagher/ComfyUI-IG-Nodes"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "iggy101"
DisplayName = "ComfyUI-IG-Nodes"
Icon = ""
